Home page updates and links

--- a/website/views/index.erb
+++ b/website/views/index.erb
@@ -6,9 +6,12 @@ massive-archer
 
 </head>
 <body>
-Welcome to massive-archer <img src="http://www.ejumpcut.org/archive/jc50.2008/StarTrekEnt/twilightJCimages/20ArcherWatches.jpg" />
+Welcome to massive-archer<br>
+<img src="http://www.ejumpcut.org/archive/jc50.2008/StarTrekEnt/twilightJCimages/20ArcherWatches.jpg" /><br>
+The number one site for Husker news.<br><br>
 
-The number one site for Husker news.
+<a href="/scan">Scan for new articles</a><br>
+<a href="/review">Review articles for publishing</a>
 </body>
 </html>
 
