Ability to view headlines on homepage

--- a/website/views/index.erb
+++ b/website/views/index.erb
@@ -11,7 +11,12 @@ Welcome to massive-archer<br>
 The number one site for Husker news.<br><br>
 
 <a href="/scan">Scan for new articles</a><br>
-<a href="/review">Review articles for publishing</a>
+<a href="/review">Review articles for publishing</a><br><br>
+
+<hr>
+Check out our hot recent Husker news:
+<hr>
+<%= recent_items_html %>
 </body>
 </html>
 
