Added ability to lock revieews to a user

--- a/views/review_item.erb
+++ b/views/review_item.erb
@@ -22,6 +22,9 @@ massive-archer review item
     <button type="submit">Go</button>
 
 </form>
+<br>
+<br>
+<a href="/review/<%= item.id %>/pass">Pass (free item for another user)</a>
 
 </body>
 </html>
