Added ability to create random new news item

--- a/views/review.erb
+++ b/views/review.erb
@@ -10,6 +10,9 @@ massive-archer review
 <% items.each do |item| %>
     <a href="/review/<%= item.id %>"><%= item.feed %> - <%= item.title %></a><br>
 <% end %>
+<br>
+<br>
+<a href="/review/new">Or, create your own!</a>
 
 </body>
 </html>
