--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,8 @@ massive-archer
     <label>password</label><input type="password" name="password"><br>
     <button type="submit">Log In!</button>
   </form>
+
+  <a style="font-weight: bold; color: white; background: blue; border-radius: 5px; padding: 5px;" href="/create-account">Create an Account</a>
   <% else %>
   Logged in as <%= @user.username %> <a href='/logout'>Logout</a>
   <% end %>
