--- a/views/index.erb
+++ b/views/index.erb
@@ -27,9 +27,14 @@ The number one site for Husker news.<br><br>
 <a href="/review">Review articles for publishing</a><br><br>
 
 <hr>
+<% if (!@temp_user.nil? && @temp_user.valid_until > Time.now) || !@user.nil? %>
 Check out our hot recent Husker news:
 <hr>
 <%= recent_items_html %>
+
+<% else %>
+Uh oh! Your free trial has expired. Please create an account and pay to continue viewing great Husker news!!
+<% end %>
 </body>
 </html>
 
