--- a/views/index.erb
+++ b/views/index.erb
@@ -13,6 +13,9 @@ massive-archer
     <label>password</label><input type="password" name="password"><br>
     <button type="submit">Log In!</button>
   </form>
+  <% unless @temp_user.nil? %>
+    You have <%= ((@temp_user.valid_until - Time.now) / 3600).round(1) %> hours remaining on your free trial.<br><br>
+  <% end %>
 
   <a style="font-weight: bold; color: white; background: blue; border-radius: 5px; padding: 5px;" href="/create-account">Create an Account</a>
   <% else %>
