Added another archer

--- a/views/index.erb
+++ b/views/index.erb
@@ -23,7 +23,8 @@ massive-archer
   <% end %>
 </div>
 Welcome to massive-archer<br>
-<img src="http://www.ejumpcut.org/archive/jc50.2008/StarTrekEnt/twilightJCimages/20ArcherWatches.jpg" /><br>
+<img width="200px" src="http://www.ejumpcut.org/archive/jc50.2008/StarTrekEnt/twilightJCimages/20ArcherWatches.jpg" />
+<img width="200px" src="http://www.gq.com/images/entertainment/2012/01/archer-excerpt/archer-628.jpg" /><br>
 The number one site for Husker news.<br><br>
 
 <a href="/scan">Scan for new articles</a><br>
